welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:50: error: Unmatched closing brace '}' ignored here
}
^